# VHCF

./: readme.md
Variable_hash_cuckoo_filter/: CMakeLists.txt  bitsutil.h  crc64.h  cuckoofilter.h  cuckoofilter_fast.h  cuckoofilter_flex.h  hashutil.h  linear_congruential_hash.h  precompute.cpp  singletable.h  singletable_fast.h
adaptive_cuckoo/: CMakeLists.txt  MurmurHash3.cpp  MurmurHash3.h  bitsutil.h  crc64.h  cuckoofilter.h  cuckoofilter_fast.h  cuckoofilter_flex.h  hashutil.h  linear_congruential_hash.h  precompute.cpp  precompute.h  singletable.h  singletable_fast.h
adaptive_cuckoo_filter/: .clangd  CMakeLists.txt
adaptive_cuckoo_filter/cmake/: MyProjectOptions.cmake
adaptive_cuckoo_filter/src/: CMakeLists.txt  HTmap.hpp  acf2x4.cpp  acf4x1.cpp  fat_tree.h  linear_congruential_hash.h  test_for_fat_tree.cpp  test_for_ycsb.cpp  util.cpp  utils.cpp
bloom_filter/: CMakeLists.txt  checks.json
bloom_filter/bloom_filter/: CMakeLists.txt  bloom_filter.h  hashutil.h  main.cpp  utils.cpp
bloom_filter/cache_backed_bloom_filter/: CMakeLists.txt  cache_backed_bloom_filter.h
bloom_filter/hash_table/: CMakeLists.txt  hash_table.h  murmur3.h
bloom_filter/main/: CMakeLists.txt  main.cpp
bloom_filter/utils/: CMakeLists.txt  utils.h
cuckoo_fillter/: CMakeLists.txt
cuckoo_fillter/src/: CMakeLists.txt  bitsutil.h  crc64.cpp  cuckoofilter.h  hashutil.h  precompute.h  scrambled_zipfian_generator.h  singletable.h  test_for_firehose.cpp  test_for_ycsb.cpp  throughput_test.cpp  throughput_test_insert_and_delete.cpp  (+2 more)
hash_adaptive_bloom_filter/: CMakeLists.txt
(+9 files in other folders)
